--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
             </div>
             <div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/mD7a_dN5Gks?si=zHnSSZ8uoA9fm1fc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-    </body>
-</html>
+            </div>]
+            <section class="categoria">
+                <h2>Cursos</h2>
+                <div class="categoria-videos">
+                    <a href="https://youtu.be/iKZWJG9CoDU?si=ebKnoLHYfE-KhYYA">
+                        <img src="https://img.youtube.com/vi/iKZWJG9CoDU/sddefault.jpg" />
+                    </a>
+                    <a href="https://youtu.be/r9buAwVBDhA?si=2A8u6D2QLfG8lt6Q">
+                        <img src="https://img.youtube.com/vi/r9buAwVBDhA/maxresdefault.jpg" />
+                    </a>
+                    <a href="https://youtu.be/MZgbd7bjCTk?si=1tPQe3tPPAcTLfR6">
+                        <img src="https://img.youtube.com/vi/MZgbd7bjCTk/maxresdefault.jpg" />
+                    </a>
+                    <a href="https://youtu.be/wjDteOd996I?si=AVsP7QI1eRQ-p7oe">
+                        <img src="https://img.youtube.com/vi/wjDteOd996I/maxresdefault.jpg" />
+                    </a>
+                    <a href="https://youtu.be/3oSIqIqzN3M?si=S8e1WI3jnVDqaCZm">
+                        <img src="https://img.youtube.com/vi/3oSIqIqzN3M/maxresdefault.jpg" />
+                    </a>
+                </div>
+            </section>
+        
+        </body>
+
+        </html>
