--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
             <section class="categoria">
                 <h2>Cursos</h2>
                 <div class="categoria-videos">
-                    <a href="https://youtu.be/iKZWJG9CoDU?si=ebKnoLHYfE-KhYYA">
-                        <img src="https://img.youtube.com/vi/iKZWJG9CoDU/sddefault.jpg" />
+                    <a href="https://youtu.be/fVkvb-6uo8A?si=EGlS7FTLCsPXf_sT">
+                        <img src="https://youtu.be/knovvPSPMSE?si=nK5lxhaye1LFsFMX" />
                     </a>
-                    <a href="https://youtu.be/r9buAwVBDhA?si=2A8u6D2QLfG8lt6Q">
-                        <img src="https://img.youtube.com/vi/r9buAwVBDhA/maxresdefault.jpg" />
+                    <a href="https://youtu.be/Q1s3sMNu_QY?si=gc9wUnDUuSLel9V7">
+                        <img src="https://youtu.be/llKerA7iyHc?si=wAP587c-h9IGOCfx" />
                     </a>
-                    <a href="https://youtu.be/MZgbd7bjCTk?si=1tPQe3tPPAcTLfR6">
-                        <img src="https://img.youtube.com/vi/MZgbd7bjCTk/maxresdefault.jpg" />
+                    <a href="https://youtu.be/dDVPOBfgALY?si=I320kOWCiK3wejfj">
+                        <img src="https://youtu.be/JB9GKM1zfmY?si=RNHY-qbC1rdJFHwM" />
                     </a>
-                    <a href="https://youtu.be/wjDteOd996I?si=AVsP7QI1eRQ-p7oe">
-                        <img src="https://img.youtube.com/vi/wjDteOd996I/maxresdefault.jpg" />
+                    <a href="https://youtu.be/_Y5SjER9ssw?si=cgxPuJrivCwv80e1">
+                        <img src="https://youtu.be/6_cgvTdhsEo?si=fRHe1VeUJf-1bDjC" />
                     </a>
-                    <a href="https://youtu.be/3oSIqIqzN3M?si=S8e1WI3jnVDqaCZm">
-                        <img src="https://img.youtube.com/vi/3oSIqIqzN3M/maxresdefault.jpg" />
+                    <a href="https://youtu.be/qtfL6f2hK7s?si=ER5bEgHLm9mOtjh0">
+                        <img src="https://youtu.be/CmCwoNU231Y?si=fAasfJaoud8KaAEI" />
                     </a>
                 </div>
             </section>
