--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/mD7a_dN5Gks?si=zHnSSZ8uoA9fm1fc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>]
             <section class="categoria">
-                <h2>Cursos</h2>
+                <h2>mais filme de terror</h2>
                 <div class="categoria-videos">
                     <a href="https://youtu.be/fVkvb-6uo8A?si=EGlS7FTLCsPXf_sT">
                         <img src="https://youtu.be/knovvPSPMSE?si=nK5lxhaye1LFsFMX" />
