--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                 <p> #Freira</p>
             </div>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/mD7a_dN5Gks?si=zHnSSZ8uoA9fm1fc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>]
+                <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/mD7a_dN5Gks?si=mxuOjW1ASwUpXRkc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
         </div>
     </section>
 
