--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class="categoria">
                 <h2>mais filme de terror</h2>
                 <div class="categoria-videos">
-                    <a href="https://youtu.be/fVkvb-6uo8A?si=EGlS7FTLCsPXf_sT">
+                    <a href="https://www.youtube.com/watch?v=fVkvb-6uo8A">
                         <img src="https://youtu.be/knovvPSPMSE?si=nK5lxhaye1LFsFMX" />
                     </a>
                     <a href="https://youtu.be/Q1s3sMNu_QY?si=gc9wUnDUuSLel9V7">
