--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="https://www.youtube.com/watch?v=fVkvb-6uo8A">
                         <img src="https://www.youtube.com/watch?v=knovvPSPMSE" />
                     </a>
-                    <a href="https://youtu.be/Q1s3sMNu_QY?si=gc9wUnDUuSLel9V7">
+                    <a href="https://www.youtube.com/watch?v=Q1s3sMNu_QY">
                         <img src="https://youtu.be/llKerA7iyHc?si=wAP587c-h9IGOCfx" />
                     </a>
                     <a href="https://youtu.be/dDVPOBfgALY?si=I320kOWCiK3wejfj">
