--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
             <section class="categoria">
                 <h2>mais filme de terror</h2>
                 <div class="categoria-videos">
-                    <a href="https://www.youtube.com/watch?v=fVkvb-6uo8A">
-                        <img src="https://www.youtube.com/watch?v=knovvPSPMSE" />
+                    <a href="https://www.youtube.com/watch?v=fVkvb-6uo8A" target="_blank">
+                        <img src="https://img.youtube.com/vi/fVkvb-6uo8A/0.jpg" alt="Filme 1">
                     </a>
-                    <a href="https://www.youtube.com/watch?v=Q1s3sMNu_QY">
-                        <img src="https://youtu.be/llKerA7iyHc?si=wAP587c-h9IGOCfx" />
+                    <a href="https://www.youtube.com/watch?v=Q1s3sMNu_QY" target="_blank">
+                        <img src="https://img.youtube.com/vi/Q1s3sMNu_QY/0.jpg" alt="Filme 2">
                     </a>
-                    <a href="https://youtu.be/dDVPOBfgALY?si=I320kOWCiK3wejfj">
-                        <img src="https://youtu.be/JB9GKM1zfmY?si=RNHY-qbC1rdJFHwM" />
+                    <a href="https://youtu.be/dDVPOBfgALY" target="_blank">
+                        <img src="https://img.youtube.com/vi/dDVPOBfgALY/0.jpg" alt="Filme 3">
                     </a>
-                    <a href="https://youtu.be/_Y5SjER9ssw?si=cgxPuJrivCwv80e1">
-                        <img src="https://youtu.be/6_cgvTdhsEo?si=fRHe1VeUJf-1bDjC" />
+                    <a href="https://youtu.be/_Y5SjER9ssw" target="_blank">
+                        <img src="https://img.youtube.com/vi/_Y5SjER9ssw/0.jpg" alt="Filme 4">
                     </a>
-                    <a href="https://youtu.be/qtfL6f2hK7s?si=ER5bEgHLm9mOtjh0">
-                        <img src="https://youtu.be/CmCwoNU231Y?si=fAasfJaoud8KaAEI" />
-                    </a>
+                    <a href="https://youtu.be/qtfL6f2hK7s" target="_blank">
+                        <img src="https://img.youtube.com/vi/qtfL6f2hK7s/0.jpg" alt="Filme 5">
                 </div>
             </section>
         
