--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
         </div>
     </section>
 
-            <section class="categoria">
-                <h2>mais filme de terror</h2>
-                <div class="categoria-videos">
-                    <a href="https://www.youtube.com/watch?v=fVkvb-6uo8A" target="_blank">
-                        <img src="https://img.youtube.com/vi/fVkvb-6uo8A/0.jpg" alt="Filme 1">
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=Q1s3sMNu_QY" target="_blank">
-                        <img src="https://img.youtube.com/vi/Q1s3sMNu_QY/0.jpg" alt="Filme 2">
-                    </a>
-                    <a href="https://youtu.be/dDVPOBfgALY" target="_blank">
-                        <img src="https://img.youtube.com/vi/dDVPOBfgALY/0.jpg" alt="Filme 3">
-                    </a>
-                    <a href="https://youtu.be/_Y5SjER9ssw" target="_blank">
-                        <img src="https://img.youtube.com/vi/_Y5SjER9ssw/0.jpg" alt="Filme 4">
-                    </a>
-                    <a href="https://youtu.be/qtfL6f2hK7s" target="_blank">
-                        <img src="https://img.youtube.com/vi/qtfL6f2hK7s/0.jpg" alt="Filme 5">
-                </div>
-            </section>
+    <section class="categoria">
+        <h2>Mais filmes de terror</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=fVkvb-6uo8A" target="_blank">
+                <img src="https://img.youtube.com/vi/fVkvb-6uo8A/0.jpg" alt="Filme 1">
+            </a>
+            <a href="https://www.youtube.com/watch?v=Q1s3sMNu_QY" target="_blank">
+                <img src="https://img.youtube.com/vi/Q1s3sMNu_QY/0.jpg" alt="Filme 2">
+            </a>
+            <a href="https://youtu.be/dDVPOBfgALY" target="_blank">
+                <img src="https://img.youtube.com/vi/dDVPOBfgALY/0.jpg" alt="Filme 3">
+            </a>
+            <a href="https://youtu.be/_Y5SjER9ssw" target="_blank">
+                <img src="https://img.youtube.com/vi/_Y5SjER9ssw/0.jpg" alt="Filme 4">
+            </a>
+            <a href="https://youtu.be/qtfL6f2hK7s" target="_blank">
+                <img src="https://img.youtube.com/vi/qtfL6f2hK7s/0.jpg" alt="Filme 5">
+            </a>
+        </div>
+    </section>
         
         </body>
 
